dev: better Docker for further size smaller